# zerobyte

./: Cargo.toml  README.md  config.json
src/: main.rs
src/module/: bytewriter.rs  encrypt.rs  fakefile.rs  mod.rs
