[package]
name = "ZeroByte"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10"
filetime = "0.2"
pbkdf2 = "0.12"
hmac = "0.12"
rand = { version = "0.8", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
zeroize = "1.8"
anyhow = "1.0"
generic-array = "0.14"
chacha20poly1305 = "0.10"